<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/fond">

    <RadioGroup
        android:id="@+id/niveaudifficulte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <RadioButton
            android:id="@+id/facile"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facile"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/moyen"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moyen"/>
        <RadioButton
            android:id="@+id/difficile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficile"
            android:textColor="#FFFFFF"/>
        </RadioGroup>
    <TextView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:layout_above="@+id/niveaudifficulte"
        android:text="@string/choisirdifficulte"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/commencerpartie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bouton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:layout_below="@+id/niveaudifficulte"
        android:text="@string/commencerpartie"
        android:textColor="#000000"/>

</RelativeLayout>